--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
               <h1 class="mb-5">Discuss the language, or anything else!</h1>
-              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
+              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Pay!</a>
             </div>
           </div>
           <div class="col-lg-5 my-auto">
